--- a/.github/workflows/my_first_actions.yaml
+++ b/.github/workflows/my_first_actions.yaml
@@ -20,7 +20,7 @@ jobs:
           pip install -r requirements.txt
       - name: Lint with Ruff
         run: |
-          ruff lint
+          ruff
       - name: Test with pytest
         run: |
           pytest
