--- a/.github/workflows/my_first_actions.yaml
+++ b/.github/workflows/my_first_actions.yaml
@@ -6,8 +6,11 @@ on:
     branches: [ "main" ]
 jobs:
   My-first-CI:
-    runs-on: ubuntu-latest
-    
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
